--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     },
     "require": {
-        "symfony/symfony": "~2.4|~3.0",
-        "sensio/framework-extra-bundle": "~3.0"
+        "symfony/symfony": "^3.4",
+        "sensio/framework-extra-bundle": "^5.0",
+        "twig/twig": "^2.0"
     }
 }
